@@ -2,6 +2,7 @@ python-apt (0.7.91) UNRELEASED; urgency=low
 
   * Rename all methods,functions,attributes to conform to PEP 8 (Closes: #481061)
   * Where possible, derive apt.package.Record from collections.Mapping.
+  * ActionGroups can be used as a context manager for the 'with' statement.
 
  -- Julian Andres Klode <jak@debian.org>  Fri, 17 Apr 2009 17:48:27 +0200
 
